heybat - bug fix